syntax = 'proto3';

option csharp_namespace = "GrpcCodeLearn.Server";

package discount;

service Discount {
  rpc GetDiscount(GetDiscountRequest) returns (GetDiscountResponse);
}

message GetDiscountRequest {
  string discountId = 1;
}

message GetDiscountResponse {
  string id = 1;
  double amount = 2;
}